--- a/EdiListFX/src/de/vbl/im/view/EdiKomponente.fxml
+++ b/EdiListFX/src/de/vbl/im/view/EdiKomponente.fxml
@@ -16,7 +16,7 @@
 				</ToolBar>
 				<AnchorPane minHeight="0.0" minWidth="0.0">
 					<children>
-						<TitledPane animated="false" collapsible="false" prefHeight="146.0" prefWidth="298.0" text="Eigenschaften der Komponente" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+						<TitledPane animated="false" collapsible="false" prefHeight="146.0" prefWidth="298.0" text="Eigenschaften" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 							<content>
 								<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
 									<children>
@@ -31,15 +31,15 @@
 				</AnchorPane>
 				<AnchorPane minHeight="0.0" minWidth="0.0">
 					<children>
-						<TitledPane animated="false" layoutX="38.0" layoutY="-11.0" prefHeight="146.0" prefWidth="298.0" text="Verwendungen der Komponente" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+						<TitledPane animated="false" layoutX="38.0" layoutY="-11.0" prefHeight="146.0" prefWidth="298.0" text="Verwendungen" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 							<content>
 								<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
 									<children>
 										<TableView fx:id="tvVerwendungen" prefHeight="120.0" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
 											<columns>
-												<TableColumn fx:id="tcEdiNr" maxWidth="50.0" minWidth="44.0" prefWidth="44.0" text="Edi-Nr." />
-												<TableColumn fx:id="tcSender" maxWidth="500.0" minWidth="150.0" prefWidth="250.0" text="Edi-Sender" />
-												<TableColumn fx:id="tcEmpfaenger" maxWidth="500.0" minWidth="150.0" prefWidth="250.0" text="Edi-Empfänger" /><TableColumn fx:id="tcGeschaeftsobjekt" maxWidth="400.0" minWidth="100.0" prefWidth="200.0" text="Geschäftsobjekt" />
+												<TableColumn fx:id="tcEdiNr" maxWidth="56.000001549720764" minWidth="44.0" prefWidth="56.000001549720764" text="SST-Nr." />
+												<TableColumn fx:id="tcSender" maxWidth="500.0" minWidth="150.0" prefWidth="237.99996185302734" text="Sender" />
+												<TableColumn fx:id="tcEmpfaenger" maxWidth="500.0" minWidth="150.0" prefWidth="250.0" text="Empfänger" /><TableColumn fx:id="tcGeschaeftsobjekt" maxWidth="400.0" minWidth="100.0" prefWidth="200.0" text="Geschäftsobjekt" />
 												<TableColumn fx:id="tcDatumAb" maxWidth="75.0" minWidth="75.0" prefWidth="75.0" text="Ab-Datum" />
 												<TableColumn fx:id="tcDatumBis" maxWidth="85.0" minWidth="85.0" prefWidth="85.0" text="Bis-Datum" />
 											</columns>
