--- a/EdiListFX/src/de/vbl/im/view/EdiSystem.fxml
+++ b/EdiListFX/src/de/vbl/im/view/EdiSystem.fxml
@@ -22,7 +22,7 @@
   			<items>
 <AnchorPane minHeight="0.0" minWidth="0.0">
 <children>
-<TitledPane animated="false" collapsible="false" prefHeight="267.0" prefWidth="933.0" text="Eigenschaften des Systems" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+<TitledPane animated="false" collapsible="false" prefHeight="267.0" prefWidth="933.0" text="Eigenschaften" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 <content>
     			<AnchorPane maxHeight="1.7976931348623157E308" minHeight="0.0" minWidth="0.0">
 					<children>
@@ -42,13 +42,13 @@
 </AnchorPane>
 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0">
 <children>
-                  <TitledPane animated="false" maxHeight="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefWidth="933.0" text="Verwendungen des Systems" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <TitledPane animated="false" maxHeight="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefWidth="933.0" text="Verwendungen" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <content>
                               <TableView fx:id="tvVerwendungen" minHeight="0.0" minWidth="0.0" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
                                  <columns>
-                                    <TableColumn fx:id="tcEdiNr" editable="false" maxWidth="50.0" minWidth="44.0" prefWidth="44.0" text="Edi-Nr." />
-                                    <TableColumn fx:id="tcSender" editable="false" maxWidth="500.0" minWidth="150.0" prefWidth="250.0" text="Edi-Sender" />
-                                    <TableColumn fx:id="tcEmpfaenger" editable="false" maxWidth="500.0" minWidth="150.0" prefWidth="250.0" text="Edi-Empfänger" />
+                                    <TableColumn fx:id="tcEdiNr" editable="false" maxWidth="55.0" minWidth="44.0" prefWidth="55.0" text="SST-Nr." />
+                                    <TableColumn fx:id="tcSender" editable="false" maxWidth="500.0" minWidth="150.0" prefWidth="255.0" text="Sender" />
+                                    <TableColumn fx:id="tcEmpfaenger" editable="false" maxWidth="500.0" minWidth="150.0" prefWidth="250.0" text="Empfänger" />
                                     <TableColumn fx:id="tcGeschaeftsobjekt" editable="false" maxWidth="400.0" minWidth="100.0" prefWidth="200.0" text="Geschäftsobjekt" />
                                     <TableColumn fx:id="tcDatumAb" editable="false" maxWidth="75.0" minWidth="75.0" prefWidth="75.0" text="Ab-Datum" />
                                     <TableColumn fx:id="tcDatumBis" editable="false" maxWidth="85.0" minWidth="85.0" prefWidth="85.0" text="Bis-Datum" />
