--- a/EdiListFX/src/de/vbl/im/view/GeschaeftsObjekt.fxml
+++ b/EdiListFX/src/de/vbl/im/view/GeschaeftsObjekt.fxml
@@ -16,7 +16,7 @@
 				</ToolBar>
 				<AnchorPane minHeight="0.0" minWidth="0.0">
 					<children>
-						<TitledPane animated="false" collapsible="false" prefHeight="146.0" prefWidth="298.0" text="Eigenschaften des Geschäftsobjektes" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+						<TitledPane animated="false" collapsible="false" prefHeight="146.0" prefWidth="298.0" text="Eigenschaften" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 							<content>
 								<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
 									<children>
@@ -31,16 +31,16 @@
 				</AnchorPane>
 				<AnchorPane minHeight="0.0" minWidth="0.0">
 					<children>
-						<TitledPane animated="false" layoutX="38.0" layoutY="-11.0" prefHeight="146.0" prefWidth="298.0" text="Verwendungen des Geschäftsobjektes" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+						<TitledPane animated="false" layoutX="38.0" layoutY="-11.0" prefHeight="146.0" prefWidth="298.0" text="Verwendungen" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 							<content>
 								<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
 									<children>
 										<TableView fx:id="tvVerwendungen" prefHeight="120.0" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
 											<columns>
-												<TableColumn fx:id="tcEdiNr" maxWidth="100.0" minWidth="44.0" prefWidth="100.0" text="Edi-Nr." />
+												<TableColumn fx:id="tcEdiNr" maxWidth="100.0" minWidth="44.0" prefWidth="100.0" text="SST-Nr." />
 <TableColumn fx:id="tcIntegration" maxWidth="500.0" prefWidth="-1.0" text="Integration" /><TableColumn fx:id="tcKonfiguration" maxWidth="500.0" prefWidth="-1.0" text="Konfiguration" visible="false" />
-												<TableColumn fx:id="tcSender" maxWidth="500.0" minWidth="150.0" prefWidth="-1.0" text="Edi-Sender" />
-												<TableColumn fx:id="tcEmpfaenger" maxWidth="500.0" minWidth="150.0" prefWidth="-1.0" text="Edi-Empfänger" />
+												<TableColumn fx:id="tcSender" maxWidth="500.0" minWidth="150.0" prefWidth="-1.0" text="Sender" />
+												<TableColumn fx:id="tcEmpfaenger" maxWidth="500.0" minWidth="150.0" prefWidth="-1.0" text="Empfänger" />
 												<TableColumn fx:id="tcDatumAb" maxWidth="75.0" minWidth="75.0" prefWidth="75.0" text="Ab-Datum" visible="false" />
 												<TableColumn fx:id="tcDatumBis" maxWidth="85.0" minWidth="85.0" prefWidth="85.0" text="Bis-Datum" visible="false" />
 											</columns>
