DokuAuswahl verbessert, automatische SST-Bezeichnung begonnen

--- a/EdiListFX/src/de/vbl/im/view/IntegrationManager.fxml
+++ b/EdiListFX/src/de/vbl/im/view/IntegrationManager.fxml
@@ -51,18 +51,18 @@
 					<content>
 						<AnchorPane minHeight="0.0" minWidth="0.0">
 							<children>
-								<SplitPane dividerPositions="0.32338308457711445" prefHeight="739.0" prefWidth="1407.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+								<SplitPane dividerPositions="0.4" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 									<items>
 										<AnchorPane minHeight="0.0" minWidth="0.0">
 											<children>
 												<VBox prefHeight="739.0" prefWidth="1407.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
 													<children>
 														<ToolBar layoutX="-48.0" layoutY="14.0" visible="false" />
-														<TableView fx:id="tableEdiNrAuswahl" onContextMenuRequested="#actionEdiNrContextMenuRequested" prefHeight="702.0" prefWidth="535.0" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
+														<TableView fx:id="tableEdiNrAuswahl" onContextMenuRequested="#actionEdiNrContextMenuRequested" prefHeight="702.0" tableMenuButtonVisible="true" VBox.vgrow="ALWAYS">
 															<columns>
 																<TableColumn fx:id="tColAuswahlEdiNr" editable="false" maxWidth="120.0" minWidth="0.0" prefWidth="35.0" text="Nr." />
-																<TableColumn fx:id="tColAuswahlEdiNrIngration" prefWidth="127.0" text="Integration" />
-																<TableColumn fx:id="tColAuswahlEdiNrSender" prefWidth="85.0" text="Sender" />
+																<TableColumn fx:id="tColAuswahlEdiNrIngration" prefWidth="150.0" text="Integration" />
+																<TableColumn fx:id="tColAuswahlEdiNrSender" prefWidth="160.0" text="Sender" />
 																<TableColumn fx:id="tColAuswahlEdiNrBezeichnung" editable="false" maxWidth="1.7976931348623157E308" minWidth="200.0" prefWidth="-1.0" text="Schnittstellenbezeichnung" />
 															</columns>
 														</TableView>
