--- a/EdiListFX/src/de/vbl/im/view/Schnittstelle.fxml
+++ b/EdiListFX/src/de/vbl/im/view/Schnittstelle.fxml
@@ -25,7 +25,7 @@
 								<GridPane hgap="8.0" layoutX="14.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="251.0" vgap="8.0" AnchorPane.bottomAnchor="19.200000000000017" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="5.199999999999818" AnchorPane.topAnchor="0.0">
 									<columnConstraints>
 										<ColumnConstraints hgrow="SOMETIMES" maxWidth="85.0" minWidth="10.0" />
-										<ColumnConstraints hgrow="SOMETIMES" maxWidth="520.0" />
+										<ColumnConstraints hgrow="SOMETIMES" maxWidth="503.0" />
 										<ColumnConstraints hgrow="NEVER" maxWidth="90.0" minWidth="55.0" prefWidth="70.0" />
                               <ColumnConstraints hgrow="NEVER" maxWidth="-Infinity" minWidth="10.0" />
 									</columnConstraints>
@@ -46,7 +46,7 @@
 <font>
 <Font name="System Bold" size="13.0" />
 </font></Button>
-<Button alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="59.0" layoutY="10.0" mnemonicParsing="false" onAction="#actionNewDokuLink" prefWidth="28.0" text="-">
+<Button fx:id="m_RemoveDokuLinkBtn" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="59.0" layoutY="10.0" mnemonicParsing="false" onAction="#actionRemoveDokuLink" prefWidth="28.0" text="-">
 <font>
 <Font name="System Bold" size="15.0" />
 </font>
